--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^2.9.3",
     "core-js": "^2.6.5",
     "element-ui": "^2.13.0",
+    "mobile-device-detect": "^0.3.3",
     "perfect-scrollbar": "^1.5.0",
     "tui-chart": "^3.10.0",
     "vue": "^2.6.10",
